--- a/run.yaml
+++ b/run.yaml
@@ -10,7 +10,7 @@ spec:
     - name: SIZE
       value: "1k"
     - name: IMAGE
-      value: "image-registry.openshift-image-registry.svc.cluster.local:5000/benchmark/test"
+      value: "image-registry.openshift-image-registry.svc.cluster.local:5000/benchmark/test:$(context.pipelineRun.name)"
       ###value: "registry.utils.svc.cluster.local:5000/benchmark/golang-docker-build-tutorial"
 
   workspaces:
