fix: Chains needs imagePullSecrets to be able to pull the image

--- a/run.yaml
+++ b/run.yaml
@@ -5,6 +5,9 @@ metadata:
 spec:
   pipelineRef:
     name: push-fake-image
+  podTemplate:
+    imagePullSecrets:
+      - name: registry-credentials
 
   params:
     - name: SIZE
